update commit - selenioum hard code working

--- a/Views/SiteCheck/Details.cshtml
+++ b/Views/SiteCheck/Details.cshtml
@@ -17,14 +17,14 @@
     </div>
     @* Results Table *@
     <div>
-        <p>TABLE GOES HERE...</p>
-        <p>@Html.Raw(Model.SiteCheckName)</p>
-        <p>Full Address - from web scrapper...</p>
-        <p>Owner Name - from web scrapper...</p>
-        <p>Zoning - from web scrapper...</p>
-        <p>Flood Zone - from web scrapper...</p>
-        <p>Airport - from web scrapper...</p>
-        <p>tbd/etc - from web scrapper...</p>
+<p>TABLE GOES HERE...</p>
+<p>@Html.Raw(Model.SiteCheckName)</p>
+<p>Full Address - from web scraper...</p>
+<p>Owner Name - from web scraper...</p>
+<p>Zoning: @Html.Raw(Model.SiteCheckName)</p>
+<p>Flood Zone - from web scraper...</p>
+<p>Airport - from web scraper...</p>
+<p>tbd/etc - from web scraper...</p>
     </div>
     <div>
         <p class="btn btn-outline-dark">Email Results</p>
