--- a/Views/User/_Login.cshtml
+++ b/Views/User/_Login.cshtml
@@ -14,7 +14,7 @@
         </div>
         @* section *@
         <div class="mb-3">
-            <label asp-for="LoginPassword"></label>
+            <label asp-for="LoginPassword">Password</label>
             <input asp-for="LoginPassword" type="password" class="form-control"/>
             <span asp-validation-for="LoginPassword" class="text-danger font-weight-bold"></span>
         </div>
